[11-5][vuongfarm]  make customers say

--- a/11-5/vuongfarm/index.html
+++ b/11-5/vuongfarm/index.html
@@ -68,11 +68,53 @@
             <p>Easiest way to healthy life by buying your favorite plants</p>
             <button>
               <p>See more</p>
-              <img src="./images/vector_right.svg" alt="">
+              <img src="./images/vector_right.svg" alt="" />
             </button>
           </div>
           <div class="right_product_list">
             <div class="product_card">
+              <img src="./images/sp1.svg" alt="" />
+              <div class="detail_product_card">
+                <h3>Natural Plants</h3>
+                <span>140.000đ</span>
+              </div>
+            </div>
+            <div class="product_card">
+              <img src="./images/sp2.svg" alt="" />
+              <div class="detail_product_card">
+                <h3>Natural Plants</h3>
+                <span>140.000đ</span>
+              </div>
+            </div>
+            <div class="product_card">
+              <img src="./images/sp3.svg" alt="" />
+              <div class="detail_product_card">
+                <h3>Natural Plants</h3>
+                <span>140.000đ</span>
+              </div>
+            </div>
+            <div class="product_card">
+              <img src="./images/sp4.svg" alt="" />
+              <div class="detail_product_card">
+                <h3>Natural Plants</h3>
+                <span>140.000đ</span>
+              </div>
+            </div>
+            <div class="product_card">
+              <img src="./images/sp5.svg" alt="" />
+              <div class="detail_product_card">
+                <h3>Natural Plants</h3>
+                <span>140.000đ</span>
+              </div>
+            </div>
+            <div class="product_card">
+              <img src="./images/sp6.svg" alt="" />
+              <div class="detail_product_card">
+                <h3>Natural Plants</h3>
+                <span>140.000đ</span>
+              </div>
+            </div>
+            <!-- <div class="product_card">
               <img src="./images/sp1.svg" alt="">
               <div class="detail_product_card">
                 <h3>Natural Plants</h3>
@@ -80,54 +122,12 @@
               </div>
             </div>
             <div class="product_card">
-              <img src="./images/sp2.svg" alt="">
-              <div class="detail_product_card">
-                <h3>Natural Plants</h3>
-                <span>140.000đ</span>
-              </div>
-            </div>
-            <div class="product_card">
-              <img src="./images/sp3.svg" alt="">
-              <div class="detail_product_card">
-                <h3>Natural Plants</h3>
-                <span>140.000đ</span>
-              </div>
-            </div>
-            <div class="product_card">
-              <img src="./images/sp4.svg" alt="">
-              <div class="detail_product_card">
-                <h3>Natural Plants</h3>
-                <span>140.000đ</span>
-              </div>
-            </div>
-            <div class="product_card">
-              <img src="./images/sp5.svg" alt="">
-              <div class="detail_product_card">
-                <h3>Natural Plants</h3>
-                <span>140.000đ</span>
-              </div>
-            </div>
-            <div class="product_card">
-              <img src="./images/sp6.svg" alt="">
-              <div class="detail_product_card">
-                <h3>Natural Plants</h3>
-                <span>140.000đ</span>
-              </div>
-            </div>
-            <div class="product_card">
               <img src="./images/sp1.svg" alt="">
               <div class="detail_product_card">
                 <h3>Natural Plants</h3>
                 <span>140.000đ</span>
               </div>
-            </div>
-            <div class="product_card">
-              <img src="./images/sp1.svg" alt="">
-              <div class="detail_product_card">
-                <h3>Natural Plants</h3>
-                <span>140.000đ</span>
-              </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="about_us">
@@ -138,29 +138,35 @@
           <div class="body_about_us">
             <div class="body_about_us_item">
               <div class="img_about_us">
-                <img src="./images/left_about_us.svg" alt="">
+                <img src="./images/left_about_us.svg" alt="" />
               </div>
               <h3>Large Assortment</h3>
-              <p>we offer many different types of products with fewer variations in each category.</p>
+              <p>
+                we offer many different types of products with fewer variations
+                in each category.
+              </p>
             </div>
             <div class="body_about_us_item">
               <div class="img_about_us">
-                <img src="./images/middle_about_us.svg" alt="">
+                <img src="./images/middle_about_us.svg" alt="" />
               </div>
               <h3>Large Assortment</h3>
-              <p>we offer many different types of products with fewer variations in each category.</p>
+              <p>
+                we offer many different types of products with fewer variations
+                in each category.
+              </p>
             </div>
             <div class="body_about_us_item">
               <div class="img_about_us">
-                <img src="./images/right_about_us.svg" alt="">
+                <img src="./images/right_about_us.svg" alt="" />
               </div>
               <h3>Large Assortment</h3>
-              <p>we offer many different types of products with fewer variations in each category.</p>
+              <p>
+                we offer many different types of products with fewer variations
+                in each category.
+              </p>
             </div>
           </div>
-        </div>
-        <div class="categories">
-          
         </div>
         <!-- <div class="banner">
           <p>Best Seller</p>
@@ -175,9 +181,118 @@
           <p>What say?</p>
         </div> -->
       </div>
+
       <!-- <footer class="footer">
         <p>&copy; 2023 all Right Reserved Term of use LowBoy</p>
       </footer> -->
+    </div>
+    <div class="categories">
+      <div class="header_category">
+        <h2>Categories</h2>
+        <p>Find what you are looking for</p>
+      </div>
+      <div class="body_category">
+        <div class="wrapper">
+          <div class="list_image_categories">
+            <div class="image_category custom_image_category">
+              <img src="./images/category1.svg" alt="" />
+              <h5>Natural Plants</h5>
+            </div>
+            <div class="image_category">
+              <img src="./images/category2.svg" alt="" />
+              <h5>Plant Accessories</h5>
+              <p>Horem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="image_category custom_image_category">
+              <img src="./images/category3.svg" alt="" />
+              <h5>Artificial Plants</h5>
+            </div>
+          </div>
+          <div class="btn_explore">
+            <button>
+              <p>Explore</p>
+              <img src="./images/vector_right.svg" alt="" />
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="customers_say">
+      <div class="header_customers_say">
+        <h1>What customers say about</h1>
+        <h1>VuongFarm?</h1>
+      </div>
+      <div class="body_customers_say">
+        <div class="customers_say_item">
+          <p>
+            Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            vulputate libero et velit interdum, ac aliquet odio mattis. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos.
+          </p>
+          <div class="detail_customers_say_item">
+            <div class="left_detail_customers_say_item">
+              <img src="./images/customer1.svg" alt="" />
+            </div>
+            <div class="right_detail_customers_say_item">
+              <div class="info_customer">
+                <h3>John Doe</h3>
+                <p>Youtuber</p>
+              </div>
+              <div class="review">
+                <img src="./images/star.svg" alt="" />
+                <span>4.5</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="customers_say_item">
+          <p>
+            Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            vulputate libero et velit interdum, ac aliquet odio mattis. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos.
+          </p>
+          <div class="detail_customers_say_item">
+            <div class="left_detail_customers_say_item">
+              <img src="./images/customer1.svg" alt="" />
+            </div>
+            <div class="right_detail_customers_say_item">
+              <div class="info_customer">
+                <h3>John Doe</h3>
+                <p>Youtuber</p>
+              </div>
+              <div class="review">
+                <img src="./images/star.svg" alt="" />
+                <span>4.5</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="customers_say_item">
+          <p>
+            Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            vulputate libero et velit interdum, ac aliquet odio mattis. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos.
+          </p>
+          <div class="detail_customers_say_item">
+            <div class="left_detail_customers_say_item">
+              <img src="./images/customer1.svg" alt="" />
+            </div>
+            <div class="right_detail_customers_say_item">
+              <div class="info_customer">
+                <h3>John Doe</h3>
+                <p>Youtuber</p>
+              </div>
+              <div class="review">
+                <img src="./images/star.svg" alt="" />
+                <span>4.5</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
