--- a/11-5/vuongfarm/index.html
+++ b/11-5/vuongfarm/index.html
@@ -255,7 +255,7 @@
           </p>
           <div class="detail_customers_say_item">
             <div class="left_detail_customers_say_item">
-              <img src="./images/customer1.svg" alt="" />
+              <img src="./images/customer2.svg" alt="" />
             </div>
             <div class="right_detail_customers_say_item">
               <div class="info_customer">
@@ -292,7 +292,123 @@
             </div>
           </div>
         </div>
+        <div class="customers_say_item">
+          <p>
+            Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            vulputate libero et velit interdum, ac aliquet odio mattis. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos.
+          </p>
+          <div class="detail_customers_say_item">
+            <div class="left_detail_customers_say_item">
+              <img src="./images/customer2.svg" alt="" />
+            </div>
+            <div class="right_detail_customers_say_item">
+              <div class="info_customer">
+                <h3>John Doe</h3>
+                <p>Youtuber</p>
+              </div>
+              <div class="review">
+                <img src="./images/star.svg" alt="" />
+                <span>4.5</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="customers_say_item">
+          <p>
+            Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            vulputate libero et velit interdum, ac aliquet odio mattis. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos.
+          </p>
+          <div class="detail_customers_say_item">
+            <div class="left_detail_customers_say_item">
+              <img src="./images/customer1.svg" alt="" />
+            </div>
+            <div class="right_detail_customers_say_item">
+              <div class="info_customer">
+                <h3>John Doe</h3>
+                <p>Youtuber</p>
+              </div>
+              <div class="review">
+                <img src="./images/star.svg" alt="" />
+                <span>4.5</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="customers_say_item">
+          <p>
+            Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            vulputate libero et velit interdum, ac aliquet odio mattis. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos.
+          </p>
+          <div class="detail_customers_say_item">
+            <div class="left_detail_customers_say_item">
+              <img src="./images/customer2.svg" alt="" />
+            </div>
+            <div class="right_detail_customers_say_item">
+              <div class="info_customer">
+                <h3>John Doe</h3>
+                <p>Youtuber</p>
+              </div>
+              <div class="review">
+                <img src="./images/star.svg" alt="" />
+                <span>4.5</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <footer>
+      <div class="left_footer">
+        <div class="header_left_footer">
+          <h2>GREENMIND</h2>
+          <p>We help you find</p>
+          <p>your dream plant</p>
+          <div class="icon_social">
+            <div class="circle_social fix_circle_social">
+              <img src="./images/iconfb.svg" alt="" class="fix_circle_social">
+            </div>
+            <div class="circle_social">
+              <img src="./images/iconinsta.svg" alt="">
+            </div>
+            <div class="circle_social">
+              <img src="./images/icontwitter.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="footer_left_footer">
+          <p>2023 all Right Reserved Term of use  LowBoy</p>
+        </div>
+      </div>
+      <div class="right_footer">
+        <table>
+          <tr>
+            <td>Infomation</td>
+            <td>Company</td>
+            <td>Contact</td>
+          </tr>
+          <tr>
+            <td>About</td>
+            <td>Community</td>
+            <td>Getting Started</td>
+          </tr>
+          <tr>
+            <td>Product</td>
+            <td>Career</td>
+            <td>Pricing</td>
+          </tr>
+          <tr>
+            <td>Blog</td>
+            <td>Our story</td>
+            <td>Resources</td>
+          </tr>
+        </table>
+      </div>
+    </footer>
   </body>
 </html>
