--- a/HTML-CSS/15-5/KT-HTMLCSS/index.html
+++ b/HTML-CSS/15-5/KT-HTMLCSS/index.html
@@ -22,13 +22,12 @@
       justify-content: center;
       align-items: center;
       position: relative;
+      box-shadow: 0px 0px 0px 10px tomato,0px 0px 0px 15px purple, 0px 0px 0px 20px aqua,0px 0px 0px 25px chocolate,0px 0px 0px 30px teal,0px 0px 0px 35px dodgerblue,0px 0px 0px 40px gray,0px 0px 0px 45px red,0px 0px 0px 50px black ;
     }
 
     .background_color::before {
       position: absolute;
       content: "";
-      border: 5px solid dodgerblue;
-      outline: 5px solid gray;
       border-radius: 35px;
       width: 553px;
       height: 51px;
@@ -42,8 +41,6 @@
     .background_color::after {
       position: absolute;
       content: "";
-      border: 5px solid red;
-      outline: 5px solid black;
       border-radius: 35px;
       width: 534px;
       height: 32px;
