[19-5][aVuong check bai lan 1]

--- a/JAVASCRIPT/18-5/BT1/vuongfarm/index.html
+++ b/JAVASCRIPT/18-5/BT1/vuongfarm/index.html
@@ -19,14 +19,14 @@
         </ul>
         <ul class="top-icon">
           <li>
-            <a href=""><img src="./images/cart.svg" alt="" /></a>
+            <a href=""><img src="./images/index/cart.svg" alt="" /></a>
           </li>
           <li>
-            <a href=""><img src="./images/people.svg" alt="" /></a>
+            <a href=""><img src="./images/index/people.svg" alt="" /></a>
           </li>
-          <li><img src="./images/line_y.svg" alt="" /></li>
+          <li><img src="./images/index/line_y.svg" alt="" /></li>
           <li>
-            <a href=""><img src="./images/category.svg" alt="" /></a>
+            <a href=""><img src="./images/index/category.svg" alt="" /></a>
           </li>
         </ul>
       </div>
@@ -51,13 +51,13 @@
             <div class="form_search">
               <form action="">
                 <input type="search" placeholder="What are you looking for?" />
-                <button><img src="./images/search.svg" alt="" /></button>
+                <button><img src="./images/index/search.svg" alt="" /></button>
               </form>
             </div>
           </div>
           <div class="right_banner">
             <div class="circle_background"></div>
-            <img src="./images/banner.svg" alt="" />
+            <img src="./images/index/banner.svg" alt="" />
           </div>
         </div>
         <div class="product_list">
@@ -69,7 +69,7 @@
             <p>Easiest way to healthy life by buying your favorite plants</p>
             <button>
               <p>See more</p>
-              <img src="./images/vector_right.svg" alt="" />
+              <img src="./images/index/vector_right.svg" alt="" />
             </button>
           </div>
           <div class="right_product_list"></div>
@@ -82,7 +82,7 @@
           <div class="body_about_us">
             <div class="body_about_us_item">
               <div class="img_about_us">
-                <img src="./images/left_about_us.svg" alt="" />
+                <img src="./images/index/left_about_us.svg" alt="" />
               </div>
               <h3>Large Assortment</h3>
               <p>
@@ -92,7 +92,7 @@
             </div>
             <div class="body_about_us_item">
               <div class="img_about_us">
-                <img src="./images/middle_about_us.svg" alt="" />
+                <img src="./images/index/middle_about_us.svg" alt="" />
               </div>
               <h3>Large Assortment</h3>
               <p>
@@ -102,7 +102,7 @@
             </div>
             <div class="body_about_us_item">
               <div class="img_about_us">
-                <img src="./images/right_about_us.svg" alt="" />
+                <img src="./images/index/right_about_us.svg" alt="" />
               </div>
               <h3>Large Assortment</h3>
               <p>
@@ -120,23 +120,23 @@
           <div class="body_category">
             <div class="list_image_categories">
               <div class="image_category custom_image_category">
-                <img src="./images/category1.svg" alt="" />
+                <img src="./images/index/category1.svg" alt="" />
                 <h5>Natural Plants</h5>
               </div>
               <div class="image_category">
-                <img src="./images/category2.svg" alt="" />
+                <img src="./images/index/category2.svg" alt="" />
                 <h5>Plant Accessories</h5>
                 <p>Horem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
               <div class="image_category custom_image_category">
-                <img src="./images/category3.svg" alt="" />
+                <img src="./images/index/category3.svg" alt="" />
                 <h5>Artificial Plants</h5>
               </div>
             </div>
             <div class="btn_explore">
               <button>
                 <p>Explore</p>
-                <img src="./images/vector_right.svg" alt="" />
+                <img src="./images/index/vector_right.svg" alt="" />
               </button>
             </div>
           </div>
@@ -156,7 +156,7 @@
               </p>
               <div class="detail_customers_say_item">
                 <div class="left_detail_customers_say_item">
-                  <img src="./images/customer1.svg" alt="" />
+                  <img src="./images/index/customer1.svg" alt="" />
                 </div>
                 <div class="right_detail_customers_say_item">
                   <div class="info_customer">
@@ -164,7 +164,7 @@
                     <p>Youtuber</p>
                   </div>
                   <div class="review">
-                    <img src="./images/star.svg" alt="" />
+                    <img src="./images/index/star.svg" alt="" />
                     <span>4.5</span>
                   </div>
                 </div>
@@ -179,7 +179,7 @@
               </p>
               <div class="detail_customers_say_item">
                 <div class="left_detail_customers_say_item">
-                  <img src="./images/customer2.svg" alt="" />
+                  <img src="./images/index/customer2.svg" alt="" />
                 </div>
                 <div class="right_detail_customers_say_item">
                   <div class="info_customer">
@@ -187,7 +187,7 @@
                     <p>Youtuber</p>
                   </div>
                   <div class="review">
-                    <img src="./images/star.svg" alt="" />
+                    <img src="./images/index/star.svg" alt="" />
                     <span>4.5</span>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
               </p>
               <div class="detail_customers_say_item">
                 <div class="left_detail_customers_say_item">
-                  <img src="./images/customer1.svg" alt="" />
+                  <img src="./images/index/customer1.svg" alt="" />
                 </div>
                 <div class="right_detail_customers_say_item">
                   <div class="info_customer">
@@ -210,7 +210,7 @@
                     <p>Youtuber</p>
                   </div>
                   <div class="review">
-                    <img src="./images/star.svg" alt="" />
+                    <img src="./images/index/star.svg" alt="" />
                     <span>4.5</span>
                   </div>
                 </div>
@@ -225,7 +225,7 @@
               </p>
               <div class="detail_customers_say_item">
                 <div class="left_detail_customers_say_item">
-                  <img src="./images/customer2.svg" alt="" />
+                  <img src="./images/index/customer2.svg" alt="" />
                 </div>
                 <div class="right_detail_customers_say_item">
                   <div class="info_customer">
@@ -233,7 +233,7 @@
                     <p>Youtuber</p>
                   </div>
                   <div class="review">
-                    <img src="./images/star.svg" alt="" />
+                    <img src="./images/index/star.svg" alt="" />
                     <span>4.5</span>
                   </div>
                 </div>
@@ -248,7 +248,7 @@
               </p>
               <div class="detail_customers_say_item">
                 <div class="left_detail_customers_say_item">
-                  <img src="./images/customer1.svg" alt="" />
+                  <img src="./images/index/customer1.svg" alt="" />
                 </div>
                 <div class="right_detail_customers_say_item">
                   <div class="info_customer">
@@ -256,7 +256,7 @@
                     <p>Youtuber</p>
                   </div>
                   <div class="review">
-                    <img src="./images/star.svg" alt="" />
+                    <img src="./images/index/star.svg" alt="" />
                     <span>4.5</span>
                   </div>
                 </div>
@@ -271,7 +271,7 @@
               </p>
               <div class="detail_customers_say_item">
                 <div class="left_detail_customers_say_item">
-                  <img src="./images/customer2.svg" alt="" />
+                  <img src="./images/index/customer2.svg" alt="" />
                 </div>
                 <div class="right_detail_customers_say_item">
                   <div class="info_customer">
@@ -279,7 +279,7 @@
                     <p>Youtuber</p>
                   </div>
                   <div class="review">
-                    <img src="./images/star.svg" alt="" />
+                    <img src="./images/index/star.svg" alt="" />
                     <span>4.5</span>
                   </div>
                 </div>
@@ -296,16 +296,16 @@
               <div class="icon_social">
                 <div class="circle_social fix_circle_social">
                   <img
-                    src="./images/iconfb.svg"
+                    src="./images/index/iconfb.svg"
                     alt=""
                     class="fix_circle_social"
                   />
                 </div>
                 <div class="circle_social">
-                  <img src="./images/iconinsta.svg" alt="" />
+                  <img src="./images/index/iconinsta.svg" alt="" />
                 </div>
                 <div class="circle_social">
-                  <img src="./images/icontwitter.svg" alt="" />
+                  <img src="./images/index/icontwitter.svg" alt="" />
                 </div>
               </div>
             </div>
