--- a/JAVASCRIPT/18-5/BT1/vuongfarm/detail_product.html
+++ b/JAVASCRIPT/18-5/BT1/vuongfarm/detail_product.html
@@ -44,6 +44,48 @@
                 </div>
             </div>
         </header>
+        <div id="detail_product">
+            <div class="breadcrumb">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sales</a></li>
+                    <li><a href="#">Hoodie</a></li>
+                </ul>
+            </div>
+            <div class="body_detail_product">
+                <div class="left_body_detail_product">
+                    <div class="list_image">
+                        <div class="main_image">
+                            <img src="./images/detail_product/main_image_1.svg" alt="">
+                        </div>
+                        <div class="other_image">
+                            <div class="other_image_item">
+                                <img src="./images/detail_product/main_image_1.svg" alt="">
+                            </div>
+                            <div class="other_image_item">
+                                <img src="./images/detail_product/main_image_1.svg" alt="">
+                            </div>
+                            <div class="other_image_item">
+                                <img src="./images/detail_product/main_image_1.svg" alt="">
+                            </div>
+                            <div class="other_image_item">
+                                <img src="./images/detail_product/main_image_1.svg" alt="">
+                            </div>
+                            <div class="other_image_item">
+                                <img src="./images/detail_product/main_image_1.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right_body_detail_product">
+                    <h1>Plaid Sleeve Kangaroo Pocket Drawstring Hoodie</h1>
+                    <div class="brand">
+                        <h1>BY</h1>
+                        <span>Cosmo Fashion</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="product_list"></div>
     </div>
     <script src="./js/detail_product.js"></script>
