Demo Home Page NFT

--- a/JAVASCRIPT/18-5/BT1/vuongfarm/login.html
+++ b/JAVASCRIPT/18-5/BT1/vuongfarm/login.html
@@ -16,7 +16,7 @@
           <div class="left_login">
             <h2>Log In</h2>
             <div class="form_login">
-              <form action="#" onsubmit="login()">
+              <form>
                 <div class="form_login_item">
                   <label for="">Username</label>
                   <input
@@ -38,7 +38,7 @@
                     placeholder="password"
                   />
                 </div>
-                <button>
+                <button onclick="login()">
                   <h3>LOGIN IN</h3>
                   <img src="./images/login/arrow_right.svg" alt="" />
                 </button>
